# Projects

./: Auto_Data_Parser.py  Cheating_Hangman.py  MonteCarloSameBirthday.py  README.md
Password_Generator_C_Project/: CMakeLists.txt  alphabet.c  alphabet.h  information_content.c  information_content.h  main.c  pw_generator.c  pw_generator.h
